Fix dropdown active color in dark mode

--- a/site/src/component/SearchPopup/SearchPopup.scss
+++ b/site/src/component/SearchPopup/SearchPopup.scss
@@ -8,8 +8,12 @@
         .dropdown:hover {
             border-color: var(--overlay4);
         }
-        .ui.dropdown .menu>.item:hover {
-            background-color: var(--overlay4);
+
+        .ui.dropdown {
+            .menu>.item.active,
+            .menu>.item:hover {
+                background-color: var(--overlay4);
+            }
         }
     }
 }
